Fixed issues with Tak help

--- a/src/views/products/data/tak/quickstart/ios/TakQuickstartIos1.html
+++ b/src/views/products/data/tak/quickstart/ios/TakQuickstartIos1.html
@@ -40,7 +40,7 @@
             <Description>TakQuickstartIos1.unfoldableCard2.description1</Description>
             <Description>
               <Button
-                variant='{width:"full"}'
+                variant='{"width":"full"}'
                 onClick="downloadZip"
                 class="m-1 px-3 bg-success text-white w-full"
               >serviceTak.grabZipButton
