--- a/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin2.html
+++ b/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin2.html
@@ -41,11 +41,10 @@
             <Description>TakQuickstartWin2.unfoldableCardDownload.description1</Description>
             <Description>
               <Button
-                variant={{ width: "full" }}
-                  onClick={handleDownloadButtonClick}
+                variant='{"width":"full"}'
+                onClick="downloadZip"
                 class="m-1 px-3 bg-success text-white w-full"
-              >serviceTak.grabZipButton
-              </Button>
+              >serviceTak.grabZipButton</Button>
             </Description>
             <Note>TakQuickstartIos1.unfoldableCard2.note</Note>
           </UnfoldableCard>
