--- a/src/views/products/data/tak/usage/ServiceTakUsage.html
+++ b/src/views/products/data/tak/usage/ServiceTakUsage.html
@@ -14,8 +14,8 @@
         <CardsContainer>
           <ServiceInfoCard
             title="serviceTakUsageView.serviceInfoCardTitle"
-          >serviceTakUsageView.serviceInfoCardDetails
-          </ServiceInfoCard>
+            details="serviceTakUsageView.serviceInfoCardDetails"
+          ></ServiceInfoCard>
         </CardsContainer>
         <ServiceUsageCard>
           <ServiceTakUsageCard></ServiceTakUsageCard>
