--- a/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid1.html
+++ b/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid1.html
@@ -45,7 +45,7 @@
             <Description>takQuickstartAndroid1.unfoldableCard2.description1</Description>
             <Description>
               <Button
-                variant='{width:"full"}'
+                variant='{"width":"full"}'
                 onClick="downloadZip"
                 class="m-1 px-3 bg-success text-white w-full"
               >serviceTak.grabZipButton
